@@ -283,18 +283,12 @@ AT_CHECK([GREP -c "\->" bug14025.dot],0,[5
 AT_KEYWORDS(bug)
 AT_CLEANUP
 
-
-############################################################################
-AT_BANNER([Known Bugs])
-############################################################################
-
 AT_SETUP([Bug 14150 (https://gna.org/bugs/?14150)])
 AT_CHECK_LOLA
 AT_CHECK([cp TESTFILES/bug14150.owfn .])
 AT_CHECK([WENDY bug14150.owfn --verbose --og],0,ignore,stderr)
 AT_CHECK([GREP -q "wendy: 2 nodes left" stderr])
 AT_CHECK([GREP -q "0 : true" bug14150.og],1)
-AT_XFAIL_IF(true)
 AT_KEYWORDS(bug)
 AT_CLEANUP
 
